Coverity analysis defect 177550: Using invalid iterator

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-11-10, Storage Execution 2025-11-24, Storage Execution 2025-12-8
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Using invalid iterator

      Undefined behavior may result; the program may crash or subtly misbehave. An invalid or past-the-end iterator is being used
      /data/mci/eb9a8426ba97446dc14dcee77547a8d4/bazel_cache/16f889914104592c5f534c7092181808/execroot/_main/src/mongo/bson/column/binary_reopen.h:362: INVALIDATE_ITERATOR 177550 Function "end" creates an iterator.
      /data/mci/eb9a8426ba97446dc14dcee77547a8d4/bazel_cache/16f889914104592c5f534c7092181808/execroot/_main/src/mongo/bson/column/binary_reopen.h:362: INVALIDATE_ITERATOR 177550 Assigning: "end" = "controls->rend()".
      /data/mci/eb9a8426ba97446dc14dcee77547a8d4/bazel_cache/16f889914104592c5f534c7092181808/execroot/_main/src/mongo/bson/column/binary_reopen.h:370: INVALIDATE_ITERATOR 177550 "it" testing equal to "end".
      /data/mci/eb9a8426ba97446dc14dcee77547a8d4/bazel_cache/16f889914104592c5f534c7092181808/execroot/_main/src/mongo/bson/column/binary_reopen.h:442: INVALIDATE_ITERATOR 177550 Assigning: "<temporary>" = "it".
      /data/mci/eb9a8426ba97446dc14dcee77547a8d4/bazel_cache/16f889914104592c5f534c7092181808/execroot/_main/src/mongo/bson/column/binary_reopen.h:442: INVALIDATE_ITERATOR 177550 Assigning: "<temporary>" = "std::prev(std::vector<mongo::bsoncolumn::internal::ControlBlock, std::allocator<mongo::bsoncolumn::internal::ControlBlock> >::const_reverse_iterator(it), this->_pendingRleBlocks + 1)".
      /data/mci/eb9a8426ba97446dc14dcee77547a8d4/bazel_cache/16f889914104592c5f534c7092181808/execroot/_main/src/mongo/bson/column/binary_reopen.h:442: INVALIDATE_ITERATOR 177550 Assigning: "it" = "std::vector<mongo::bsoncolumn::internal::ControlBlock, std::allocator<mongo::bsoncolumn::internal::ControlBlock> >::const_reverse_iterator(std::prev(std::vector<mongo::bsoncolumn::internal::ControlBlock, std::allocator<mongo::bsoncolumn::internal::ControlBlock> >::const_reverse_iterator(it), this->_pendingRleBlocks + 1))".
      /data/mci/eb9a8426ba97446dc14dcee77547a8d4/bazel_cache/16f889914104592c5f534c7092181808/execroot/_main/src/mongo/bson/column/binary_reopen.h:446: INVALIDATE_ITERATOR 177550 Dereferencing iterator "it" though it is already past the end of its container.

            Assignee:
            Henrik Edin
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: