SERVER-113374 Add check for empty container to guide Coverity (#44344)

GitOrigin-RevId: e52a5a2c9e0aee02fb063ce580e0075e30354096